--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,7 +1,7 @@
 TEAM_ID=
 
-PRODUCT_NAME=SchneaggchatV3
-PRODUCT_BUNDLE_IDENTIFIER=com.lerchenflo.schneaggchat.SchneaggchatV3$(TEAM_ID)
+PRODUCT_NAME=SchneaggchatV3mp
+PRODUCT_BUNDLE_IDENTIFIER=org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
