--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ kotlinSerialization = "1.9.0"
 koin-core = "4.1.0"
 koin-annotations = "2.1.0"
 ktor = "3.2.3"
+adaptive = "1.1.2"
 
 
 [libraries]
@@ -41,6 +42,7 @@ room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-runtime-android = { module = "androidx.room:room-runtime-android", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
+material3-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
 
 
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin-core" }
