--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,10 +12,13 @@ androidx-testExt = "1.3.0"
 composeHotReload = "1.0.0-beta05"
 composeMultiplatform = "1.8.2"
 junit = "4.13.2"
+
 kotlin = "2.2.0"
+ksp = "2.2.0-2.0.2"
+
 kotlinx-coroutines = "1.10.2"
 room = "2.7.2"
-ksp = "2.2.0-2.0.2"
+
 sqlite = "2.5.2"
 kotlinx-datetime = "0.6.0"
 
@@ -25,6 +28,7 @@ koin-core = "4.1.0"
 koin-annotations = "2.1.0"
 ktor = "3.2.3"
 adaptive = "1.1.2"
+datastore = "1.1.7"
 
 
 [libraries]
@@ -53,6 +57,9 @@ androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", nam
 jetbrains-compose-navigation = { group = "org.jetbrains.androidx.navigation", name = "navigation-compose", version.ref= "navigationCompose"}
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerialization" }
 
+
+datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
+datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
