--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
-org.gradle.java.home=/opt/jdk-17
+#org.gradle.java.home=/opt/jdk-17
 #org.gradle.java.home=/usr/lib/jvm/temurin-17-jre
 
 
