--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,8 +13,8 @@ composeHotReload = "1.0.0-beta05"
 composeMultiplatform = "1.8.2"
 junit = "4.13.2"
 
-kotlin = "2.2.0"
-ksp = "2.2.0-2.0.2"
+kotlin = "2.2.20-RC"
+ksp = "2.2.20-RC-2.0.2"
 
 kotlinx-coroutines = "1.10.2"
 room = "2.7.2"
