--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,8 @@ androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
 androidx-lifecycle = "2.9.3"
 androidx-testExt = "1.3.0"
-composeHotReload = "1.0.0-beta05"
-composeMultiplatform = "1.8.2"
+composeHotReload = "1.0.0-beta06"
+composeMultiplatform = "1.10.0-alpha01"
 junit = "4.13.2"
 
 kotlin = "2.2.20-RC"
@@ -20,11 +20,11 @@ kotlinx-coroutines = "1.10.2"
 room = "2.7.2"
 
 sqlite = "2.5.2"
-kotlinx-datetime = "0.6.0"
+kotlinx-datetime = "0.7.1"
 
 navigationCompose = "2.8.0-alpha13"
 kotlinSerialization = "1.9.0"
-koin-core = "4.1.0"
+koin-core = "4.1.1"
 koin-annotations = "2.1.0"
 ktor = "3.2.3"
 adaptive = "1.1.2"
@@ -70,6 +70,7 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
+
 
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin-core" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-core" }
