--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ androidx-lifecycle = "2.9.3"
 androidx-testExt = "1.3.0"
 composeHotReload = "1.0.0-beta06"
 composeMultiplatform = "1.10.0-alpha01"
+encoding = "2.4.0"
 junit = "4.13.2"
 
 kotlin = "2.2.20-RC"
@@ -34,6 +35,8 @@ mikepenz-markdown = "0.36.0-b02"
 
 
 [libraries]
+base16 = { module = "io.matthewnelson.encoding:base16", version.ref = "encoding" }
+base64 = { module = "io.matthewnelson.encoding:base64", version.ref = "encoding" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
