--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.13.0"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "35"
-androidx-activity = "1.10.1"
+androidx-activity = "1.11.0"
 androidx-appcompat = "1.7.1"
 androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
@@ -11,7 +11,7 @@ androidx-lifecycle = "2.9.3"
 androidx-testExt = "1.3.0"
 coilCompose = "2.7.0"
 coilComposeVersion = "3.3.0"
-composeHotReload = "1.0.0-beta06"
+composeHotReload = "1.0.0-beta07"
 composeMultiplatform = "1.10.0-alpha01"
 encoding = "2.4.0"
 junit = "4.13.2"
@@ -22,24 +22,26 @@ kotlin = "2.2.20-RC"
 ksp = "2.2.20-RC-2.0.2"
 
 kotlinx-coroutines = "1.10.2"
-room = "2.7.2"
+room = "2.8.0"
 
-sqlite = "2.5.2"
+sqlite = "2.6.0"
 kotlinx-datetime = "0.7.1"
 
 navigationCompose = "2.8.0-alpha13"
 kotlinSerialization = "1.9.0"
 koin-core = "4.1.1"
 koin-annotations = "2.1.0"
-ktor = "3.2.3"
+ktor = "3.3.0"
 adaptive = "1.1.2"
 datastore = "1.1.7"
 
-mikepenz-markdown = "0.36.0-b02"
-
+mikepenz-markdown = "0.37.0"
+kmpnotifier = "1.6.0"
+startupRuntime = "1.2.0"
 
 [libraries]
-base16 = { module = "io.matthewnelson.encoding:base16", version.ref = "encoding" }
+
+kmpnotifier = { module = "io.github.mirzemehdi:kmpnotifier", version.ref = "kmpnotifier"}
 base64 = { module = "io.matthewnelson.encoding:base64", version.ref = "encoding" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil3-coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilComposeVersion" }
@@ -92,6 +94,7 @@ koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref =
 
 mikepenzMultiplatformMarkdown = { module = "com.mikepenz:multiplatform-markdown-renderer", version.ref = "mikepenz-markdown" }
 mikepenzMultiplatformMarkdownM3 = { module = "com.mikepenz:multiplatform-markdown-renderer-m3", version.ref = "mikepenz-markdown" }
+androidx-startup-runtime = { module = "androidx.startup:startup-runtime", version.ref = "startupRuntime" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
