create picture size fix

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,53 +2,53 @@
 agp = "8.13.1"
 android-compileSdk = "36"
 android-minSdk = "26"
-android-targetSdk = "35"
-androidx-activity = "1.11.0"
+android-targetSdk = "36"
+androidx-activity = "1.12.0"
 androidx-appcompat = "1.7.1"
 androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.3"
+androidx-lifecycle = "2.9.6"
 androidx-testExt = "1.3.0"
 coilCompose = "2.7.0"
 coilComposeVersion = "3.3.0"
-composeHotReload = "1.0.0-beta07"
-composeMultiplatform = "1.10.0-alpha01"
-encoding = "2.4.0"
-githubImagepickerkmp = "1.0.28-beta2"
+composeHotReload = "1.0.0-rc03"
+composeMultiplatform = "1.10.0-alpha01" #update breaks all previews and some beta features???
+encoding = "2.5.0"
+githubImagepickerkmp = "1.0.28-beta3"
 junit = "4.13.2"
 
-kamelImage = "0.6.0"
-kamelImageDefault = "1.0.7"
-kotlin = "2.2.20-RC"
-ksp = "2.2.20-RC-2.0.2"
+jwtKt = "1.2.1"
+kotlin = "2.2.21"
+ksp = "2.3.1"
 
 kotlinx-coroutines = "1.10.2"
-room = "2.8.0"
+room = "2.8.4"
 
-sqlite = "2.6.0"
+sqlite = "2.6.2"
 kotlinx-datetime = "0.7.1"
 
-navigationCompose = "2.8.0-alpha13"
+navigationCompose = "2.9.1"
 kotlinSerialization = "1.9.0"
 koin-core = "4.1.1"
-koin-annotations = "2.1.0"
-ktor = "3.3.0"
-adaptive = "1.1.2"
-datastore = "1.1.7"
+koin-annotations = "2.3.1"
+ktor = "3.3.2"
+adaptive = "1.2.0"
+datastore = "1.2.0"
 
-mikepenz-markdown = "0.37.0"
+mikepenz-markdown = "0.38.1"
 kmpnotifier = "1.6.0"
 startupRuntime = "1.2.0"
+
+
 
 [libraries]
 
 github-imagepickerkmp = { module = "io.github.ismoy:imagepickerkmp", version.ref = "githubImagepickerkmp" }
+jwt-kt = { module = "com.appstractive:jwt-kt", version.ref = "jwtKt" }
 kmpnotifier = { module = "io.github.mirzemehdi:kmpnotifier", version.ref = "kmpnotifier"}
 base64 = { module = "io.matthewnelson.encoding:base64", version.ref = "encoding" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil3-coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilComposeVersion" }
-kamel-image = { module = "com.alialbaali.kamel:kamel-image", version.ref = "kamelImage" }
-kamel-image-default = { module = "media.kamel:kamel-image-default", version.ref = "kamelImageDefault" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
