--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.13.1"
 android-compileSdk = "36"
 android-minSdk = "26"
 android-targetSdk = "36"
-androidx-activity = "1.12.0"
+androidx-activity = "1.12.1"
 androidx-appcompat = "1.7.1"
 androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
@@ -11,7 +11,7 @@ androidx-lifecycle = "2.9.6"
 androidx-testExt = "1.3.0"
 coilCompose = "2.7.0"
 coilComposeVersion = "3.3.0"
-composeHotReload = "1.0.0-rc03"
+composeHotReload = "1.0.0"
 composeMultiplatform = "1.10.0-alpha01" #update breaks all previews and some beta features???
 encoding = "2.5.0"
 githubImagepickerkmp = "1.0.28-beta3"
@@ -31,7 +31,7 @@ navigationCompose = "2.9.1"
 kotlinSerialization = "1.9.0"
 koin-core = "4.1.1"
 koin-annotations = "2.3.1"
-ktor = "3.3.2"
+ktor = "3.3.3"
 adaptive = "1.2.0"
 datastore = "1.2.0"
 
