--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ local.properties
 captures
 .externalNativeBuild
 .cxx
+*.aab
+**/*.aab
+*.apk
+**/*.apk
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
