--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,11 +7,12 @@ androidx-activity = "1.12.1"
 
 androidx-lifecycle = "2.10.0-alpha06"
 coilComposeVersion = "3.3.0"
-componentsResources = "1.10.0-rc01"
+componentsResources = "1.10.0-rc02"
 composeHotReload = "1.0.0"
-composeMultiplatform = "1.10.0-rc01"
+composeMultiplatform = "1.10.0-rc02"
+cryptographyProviderOptimal = "0.5.0"
 encoding = "2.5.0"
-foundation = "1.10.0-rc01"
+foundation = "1.10.0-rc02"
 githubImagepickerkmp = "1.0.28"
 
 jwtKt = "1.2.1"
@@ -23,7 +24,7 @@ material3 = "1.9.0"
 materialIconsExtended = "1.7.3"
 room = "2.8.4"
 
-runtime = "1.10.0-rc01"
+runtime = "1.10.0-rc02"
 sqlite = "2.6.2"
 kotlinx-datetime = "0.7.1"
 
@@ -35,13 +36,15 @@ datastore = "1.2.0"
 
 mikepenz-markdown = "0.38.1"
 kmpnotifier = "1.6.1"
-uiToolingPreview = "1.10.0-rc01"
+uiToolingPreview = "1.10.0-rc02"
 
 cmpNavigation3 = "1.0.0-alpha06"
 
 [libraries]
 
 components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "componentsResources" }
+cryptography-core = { module = "dev.whyoleg.cryptography:cryptography-core", version.ref = "cryptographyProviderOptimal" }
+cryptography-provider-optimal = { module = "dev.whyoleg.cryptography:cryptography-provider-optimal", version.ref = "cryptographyProviderOptimal" }
 foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "foundation" }
 github-imagepickerkmp = { module = "io.github.ismoy:imagepickerkmp", version.ref = "githubImagepickerkmp" }
 jwt-kt = { module = "com.appstractive:jwt-kt", version.ref = "jwtKt" }
