--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,11 @@
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
 
+#ios
+-Xbinary=bundleId=org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp
+
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
