--- a/iosApp/iosApp/GoogleService-Info.plist
+++ b/iosApp/iosApp/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.lerchenflo.schneaggchatv3mp</string>
+	<string>org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp</string>
 	<key>PROJECT_ID</key>
 	<string>schneaggchatv3</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:429816239249:ios:0320bed3207a46261bdb30</string>
+	<string>1:429816239249:ios:d019e6a166324f421bdb30</string>
 </dict>
 </plist>
