--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,9 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
 
 #ios
--Xbinary=bundleId=org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp
+-Xbinary=bundleId=ComposeApp
+kotlin.apple.binary.bundleId=org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp
+
 
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED
