--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,4 +1,4 @@
-TEAM_ID=
+TEAM_ID=VQ9RSMGZ8L
 
 PRODUCT_NAME=SchneaggchatV3mp
 PRODUCT_BUNDLE_IDENTIFIER=org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp
