--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,8 @@ kmpnotifier = "1.6.1"
 uiToolingPreview = "1.10.0-rc02"
 
 cmpNavigation3 = "1.0.0-alpha06"
+appUpdateKtx = "2.1.0"
+coreKtx = "1.10.3"
 
 [libraries]
 
@@ -94,6 +96,8 @@ mikepenzMultiplatformMarkdownM3 = { module = "com.mikepenz:multiplatform-markdow
 ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "uiToolingPreview" }
 ui-tooling = { module = "org.jetbrains.compose.ui:ui-tooling", version.ref = "uiToolingPreview" }
 ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
+app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdateKtx" }
+core-ktx = { group = "com.google.android.play", name = "core-ktx", version.ref = "coreKtx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
