Ios notifications working

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -8,6 +8,9 @@
 	<array>
 		<string>remote-notification</string>
 		<string>processing</string>
+		<string>fetch</string>
 	</array>
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <false />
 </dict>
 </plist>
