--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 --enable-native-access=ALL-UN
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
+kotlin.native.ignoreDisabledTargets=true
+
 #org.gradle.java.home=/opt/jdk-17
 #org.gradle.java.home=/usr/lib/jvm/temurin-17-jre
 
