--- a/gradle.properties
+++ b/gradle.properties
@@ -19,17 +19,11 @@ kotlin.native.ignoreDisabledTargets=true
 
 
 #Android
+android.dependency.useConstraints=false
+
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 
 kotlin.native.disableCompilerDeamon = true
-android.defaults.buildfeatures.resvalues=true
-android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
-android.enableAppCompileTimeRClass=false
-android.usesSdkInManifest.disallowed=false
 android.uniquePackageNames=false
-android.dependency.useConstraints=true
 android.r8.strictFullModeForKeepRules=false
-android.r8.optimizedResourceShrinking=false
-android.builtInKotlin=false
-android.newDsl=false
