new gebi date Picker

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ room = "2.8.4"
 runtime = "1.10.0"
 sqlite = "2.6.2"
 kotlinx-datetime = "0.7.1"
+datetime-wheel-picker = "1.1.0"
 
 koin-core = "4.1.1"
 koin-annotations = "2.3.1"
@@ -74,6 +75,7 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "runtime" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
+datetime-wheel-picker = { module = "io.github.darkokoa:datetime-wheel-picker", version.ref = "datetime-wheel-picker" }
 material3-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
 
 
