--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ coreSplashscreen = "1.2.0"
 cryptographyProviderOptimal = "0.5.0"
 encoding = "2.6.0"
 foundation = "1.10.0"
-githubImagepickerkmp = "1.0.29"
+githubImagepickerkmp = "1.0.31"
 
 jwtKt = "1.2.1"
 kotlin = "2.3.0"
@@ -24,6 +24,7 @@ materialIconsExtended = "1.7.3"
 room = "2.8.4"
 
 runtime = "1.10.0"
+socket = "1.2.5"
 sqlite = "2.6.2"
 kotlinx-datetime = "0.7.1"
 datetime-wheel-picker = "1.1.0"
@@ -75,6 +76,7 @@ material3 = { module = "org.jetbrains.compose.material3:material3", version.ref 
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "runtime" }
+socket = { module = "com.ditchoom:socket", version.ref = "socket" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 datetime-wheel-picker = { module = "io.github.darkokoa:datetime-wheel-picker", version.ref = "datetime-wheel-picker" }
