--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,7 +41,7 @@ uiToolingPreview = "1.10.0"
 
 cmpNavigation3 = "1.1.0-alpha01"
 appUpdateKtx = "2.1.0"
-maps = "0.12.1"
+#maps = "0.12.1"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -54,7 +54,7 @@ composeBom = "2026.01.00"
 [libraries]
 
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
-maplibre-compose = { module = "org.maplibre.compose:maplibre-compose", version.ref = "maps" }
+#maplibre-compose = { module = "org.maplibre.compose:maplibre-compose", version.ref = "maps" }
 
 
 components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "componentsResources" }
