--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #Kotlin
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx3072M
+kotlin.daemon.jvmargs=-Xmx4096M
 
 #ios
 -Xbinary=bundleId=ComposeApp
@@ -8,7 +8,7 @@ kotlin.apple.binary.bundleId=org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp
 #kotlin.mpp.enableCInteropCommonization=true
 
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED
+org.gradle.jvmargs=-Xmx8192M -Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
@@ -24,6 +24,6 @@ android.dependency.useConstraints=false
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 
-kotlin.native.disableCompilerDeamon = true
+#kotlin.native.disableCompilerDaemon=true
 android.uniquePackageNames=false
 android.r8.strictFullModeForKeepRules=false
