--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ kotlin.daemon.jvmargs=-Xmx4096M
 #ios
 -Xbinary=bundleId=ComposeApp
 kotlin.apple.binary.bundleId=org.lerchenflo.schneaggchatv3mp.SchneaggchatV3mp
-#kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.enableCInteropCommonization=true
 
 #Gradle
 org.gradle.jvmargs=-Xmx8192M -Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED
