--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,17 +5,17 @@ androidx-activity = "1.12.2"
 
 androidx-lifecycle = "2.10.0-alpha07"
 coilComposeVersion = "3.3.0"
-componentsResources = "1.10.0"
+componentsResources = "1.10.1"
 composeHotReload = "1.0.0"
-composeMultiplatform = "1.10.0"
+composeMultiplatform = "1.10.1"
 coreSplashscreen = "1.2.0"
 cryptographyProviderOptimal = "0.5.0"
 encoding = "2.6.0"
-foundation = "1.10.0"
+foundation = "1.10.1"
 githubImagepickerkmp = "1.0.31"
 
 jwtKt = "1.2.1"
-kotlin = "2.3.0"
+kotlin = "2.3.20-Beta2"
 ksp = "2.3.4"
 
 kotlinx-coroutines = "1.10.2"
@@ -23,20 +23,21 @@ material3 = "1.9.0"
 materialIconsExtended = "1.7.3"
 room = "2.8.4"
 
-runtime = "1.10.0"
+runtime = "1.10.1"
 sqlite = "2.6.2"
 kotlinx-datetime = "0.7.1"
 datetime-wheel-picker = "1.1.0"
 
-koin-core = "4.1.1"
+koin-core = "4.2.0-RC1"
+koin-plugin = "0.3.0"
 koin-annotations = "2.3.1"
 ktor = "3.4.0"
 adaptive = "1.2.0"
 datastore = "1.2.0"
 
-mikepenz-markdown = "0.39.1"
+mikepenz-markdown = "0.39.2"
 kmpnotifier = "1.6.1"
-uiToolingPreview = "1.10.0"
+uiToolingPreview = "1.10.1"
 
 cmpNavigation3 = "1.1.0-alpha01"
 appUpdateKtx = "2.1.0"
@@ -49,7 +50,7 @@ appcompat = "1.7.1"
 material = "1.13.0"
 composeBom = "2026.01.00"
 
-ksafe = "1.4.2"
+ksafe = "1.5.0"
 
 
 [libraries]
@@ -142,6 +143,8 @@ room = { id = "androidx.room", version.ref = "room" }
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 androidKmpLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+koin-compiler = { id = "io.insert-koin.compiler.plugin", version.ref = "koin-plugin" }
+
 
 [bundles]
 ktor = [
