--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 agp = "9.0.0"
 
-androidx-activity = "1.12.2"
+androidx-activity = "1.12.4"
 
-androidx-lifecycle = "2.10.0-alpha07"
+androidx-lifecycle = "2.10.0-alpha08"
 coilComposeVersion = "3.3.0"
 componentsResources = "1.10.1"
 composeHotReload = "1.0.0"
@@ -12,7 +12,7 @@ coreSplashscreen = "1.2.0"
 cryptographyProviderOptimal = "0.5.0"
 encoding = "2.6.0"
 foundation = "1.10.1"
-githubImagepickerkmp = "1.0.31"
+githubImagepickerkmp = "1.0.32"
 
 jwtKt = "1.2.1"
 kotlin = "2.3.20-Beta2"
@@ -39,7 +39,7 @@ mikepenz-markdown = "0.39.2"
 kmpnotifier = "1.6.1"
 uiToolingPreview = "1.10.1"
 
-cmpNavigation3 = "1.1.0-alpha01"
+cmpNavigation3 = "1.1.0-alpha02"
 appUpdateKtx = "2.1.0"
 #maps = "0.12.1"
 coreKtx = "1.17.0"
@@ -48,7 +48,7 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
 material = "1.13.0"
-composeBom = "2026.01.00"
+composeBom = "2026.02.00"
 
 ksafe = "1.5.0"
 
@@ -70,7 +70,7 @@ base64 = { module = "io.matthewnelson.encoding:base64", version.ref = "encoding"
 coil3-coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilComposeVersion" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
-androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
+#androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
