--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ foundation = "1.10.1"
 githubImagepickerkmp = "1.0.32"
 
 jwtKt = "1.2.1"
-kotlin = "2.3.20-Beta2"
+kotlin = "2.3.20-RC"
 ksp = "2.3.4"
 
 kotlinx-coroutines = "1.10.2"
@@ -50,7 +50,7 @@ appcompat = "1.7.1"
 material = "1.13.0"
 composeBom = "2026.02.00"
 
-ksafe = "1.5.0"
+ksafe = "1.6.0"
 
 
 [libraries]
